# p2_analyze_educational_data

./: .gitignore  init.py  p2.ipynb  p2_analyze.ipynb  p2_part1_file_analyze.ipynb  p2_part2_cleaning_and_preparation.ipynb  p2_part3_exploration_and_analyze.ipynb  p2_part4_results.ipynb  p2test.ipynb  pyproject.toml  readme.md
