[project]
name = "analyse-systemes-educatifs"
version = "0.1.0"
description = "Analysez les données de systèmes éducatifs"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
